chat/history,chat/history/serchの追加
